tests/test/test_ast/test8.c
int main (){
char c1 ;
c1 = '\''; 
char c2 ; 
c2 = 'a';  
char c3 ;
c3 = 'a'; // error 
char c4 ;    
c4 = '"';  
char* str ;
str = "Hello, \"world!\""; 
char* invalidStr ;
invalidStr = "Unterminated string; // Invalid";
}
